--- a/Report/res/bib/citavi.bib
+++ b/Report/res/bib/citavi.bib
@@ -108,6 +108,15 @@
 }
 
 
+@online{aspWebsockets,
+ author = {Microsoft},
+ year = {2018},
+ title = {WebSockets support in ASP.NET Core},
+ url = {https://docs.microsoft.com/en-us/aspnet/core/fundamentals/websockets?view=aspnetcore-2.1},
+ urldate = {2018-08-15}
+}
+
+
 @online{asyncAwait,
  author = {Cleary, Stephen},
  year = {02.02.2012},
