--- a/Report/pages/angular.tex
+++ b/Report/pages/angular.tex
@@ -143,3 +143,4 @@ The \gls{http} protocol was designed for web pages and is based on client-initia
 \file{websocket.ts}{Sample websocket usage.}{JavaScript}
 
 Websockets can be used by calling the \lstcode{WebSocket.send()} and \lstcode{WebSocket.close()} methods as well as listening to the various events. Another approach is to wrap the WebSocket into a RxJS \lstcode{Subject}, as shown in \myautoref{lst:websocket.ts} \cite{rxjs} \cite{js_websockets}. To do so, the developer creates an \lstcode{Observable} which binds to the events of the \lstcode{WebSocket} object (lines \ref{line:websocket_observable_start} to \ref{line:websocket_observable_stop}). Then an \lstcode{Observer} is created (line \ref{line:websocket_observer}). In this example, the \lstcode{Observer} is an object which has a \lstcode{next()} method that is empty. This is due to the fact that in the Jukebox project notifications are only received through the websocket. This \lstcode{next()} method is normally used to call the \lstcode{WebSocket.send()} method to send data back to the server. A RxJS \lstcode{Subject} is created from the \lstcode{Observer} and \lstcode{Observable} objects. This \lstcode{Subject} can then be subscribed to in order to receive incoming messages. To send messages the \lstcode{Subject.next()} method may be used.
+\revMark{send was used for the player control - clarify that}
