proofread migrations, architecture, and websockets

--- a/Report/pages/asp.tex
+++ b/Report/pages/asp.tex
@@ -185,52 +185,52 @@ A mixture of all three approaches has proven to be more practical than sticking 
 
 \Subsubsection{Migrations}
 
-An application's data model will grow during the development of the application. \gls{ef} supports changes in the data model with its migrations feature. A new migration can be created using the command line tools with the command \lstcode{dotnet ef migrations add <migrationName>}, smiliarly the \lstcode{remove} command can be used to remove a migration. With the \lstcode{add} command \gls{ef} core will create or update the model snapshot class as well as create a migration's class. The model snapshot class is used as a base line for comparison when adding a new migration. The created migration's class contains code which describes the differences of the old model, \revMark{known through the snapshot}, and the current model, \revMark{knwon through the class structure}. Every migration is derived from the abstract base class \lstcode{Migration} and has to implement the \lstcode{Up()} and \lstcode{Down()} methods. As shown in \myautoref{lst:migration.cs}, the \lstcode{Up()} method contains instructions on how to apply the migration and the \lstcode{Down()} method contains instructions on how to revert the migration. \cite{efMigrations}
+An application's data model will grow during the development of the application. \gls{ef} supports changes in the data model with its migrations feature. A new migration can be created using the command line tools with the command \lstcode{dotnet ef migrations add <migrationName>}. Similiarly, the \lstcode{remove} command can be used to remove a migration. With the \lstcode{add} command \gls{ef} will create a migration class and then update the model snapshot class. The model snapshot class is used as a base line for comparison when a new migration is added. The created migration class contains code which describes the differences between the old model, as detailed in the snapshot, and the current model, as specified in the class structure. Every migration is derived from the abstract base class \lstcode{Migration} and has to implement the abstract \lstcode{Up()} and \lstcode{Down()} methods. As shown in \myautoref{lst:migration.cs}, the \lstcode{Up()} method contains instructions on how to apply the migration and the \lstcode{Down()} method contains instructions on how to revert the migration. \cite{efMigrations}
 
-Applying a single or multiple migrations can be achived via two ways. The first solution is to use the \gls{ef} command line tools to directly migrate the database with the command: \lstcode{dotnet ef database update}. This is usually the prefered method but may not be possible depending on the setup of the database. When direct migration is not possible the \gls{ef} command line tools also offer the possibility to create a \gls{sql} script. This is achived using the command: \lstcode{dotnet ef migrations script}. Both methods offer the option to revert the database by specifying the \lstcode{From} and \lstcode{To} migrations explcitly.
+There are two ways to apply one or more migrations. The first solution is to use the \gls{ef} command line tools to directly migrate the database using the command \lstcode{dotnet ef database update}. This is usually the preferred method, but may not be feasible depending on the setup of the database. When direct migration is not possible, the \gls{ef} command line tools can also be used to create a \gls{sql} script. This is achieved using the command \lstcode{dotnet ef migrations script}. Both methods offer the option to revert the database by specifying the \lstcode{From} and \lstcode{To} migrations explicitly.
 
-One limitation when using the SQLite database engine is that a table or column can not be dropped once it is created. Therefore, the Jukebox project only contains one migration. This also makes it almost impossible to actually migrate a database. The solution which is used is to create a new database each time a migration is needed. This is not problematic as long as an application is under development but as soon as it is used productivly a migration strategy will have to be developed seperatly.
+One limitation of the SQLite database engine is that a table or column cannot be dropped once it has been created. Therefore, the Jukebox project only contains one migration. This limitation prevents a series of migrations which include drop operations. The practical solution to this problem is to create a new database each time a migration would occur. This is not problematic as long as an application is under development, but as soon as it is used productively, a migration strategy will have to be developed separatly.
 
-\file{migration.cs}{Excerpt of a migration's class.}{NC_CSharp}
+\file{migration.cs}{Excerpt of a migration class.}{NC_CSharp}
 
 \Section{Architecture}
 
-A key aspect when developing any application is modularity. In \gls{asp} modularity can be achived through multiple ways, one of which are middlewares as discused in \myref{subsubsec:owin}. Although this is a good start even when using middlewares there are many parts of an application which can be \revMark{modularized}, for example seperating database code, business logic, and validation logic from each other.
+Modularity is a key aspect when developing any application. In \gls{asp}, modularity can be gained by several methods, one of which are middlewares, as discussed in \myref{subsubsec:owin}. Although using middlewares is a good start, there are many other parts of an application which can be modularized, for example separating database code, business logic, and validation logic from each other.
 
-\Subsubsection{Projectstructure}
+\Subsubsection{Project structure}
 
-The backend C\# solution, shown in \myautoref{fig:projectStructure.png}, contains six different projects. They are seperated into database related projects, framework projects, acceptance tests, and the \gls{asp} project.
+The backend C\# Solution, shown in \myautoref{fig:projectStructure.png}, contains six different projects. They are classified as database projects, framework projects, acceptance tests, and the \gls{asp} project.
 
-The database related projects contain two different projects one for the SQLite database and one for an in-memory database. Both projects do not contain domain classes or the abstract data context but helper classes, a specific SQLite context, and the SQLite migrations. This way it is simple to support \zB the \gls{mssql} server later on. Also the simplest way to support multiple database engines is to create a project for each engine which contains the migrations specific to this engine.
+The database projects contain one project with specific SQLite database classes and another one with in-memory database helper classes. Both projects contain neither domain classes nor the abstract data context because those classes are used by all databases and should therefore be located in a separate project. Using a separate project for database engine specific classes makes it easy to support another engine later on. This is due to the fact that a migration is engine specific and the \gls{ef} command line tools do not support multiple engines in one project. It is possible to use a single set of migrations for different database engines, but it requires the developer to write the migrations on his own.
 
-The framework solution folder contains the \lstcode{Jukebox.Common} and \lstcode{Jukebox.Common.Abstractions} projects. All interfaces for business logic and validation logic classes are part of the \lstcode{Jukebox.Common.Abstractions} project. Furthermore the data model is part of this \gls{dll}. All business and validation classes are contained in the \lstcode{Jukebox.Common} project. This seperation makes it possible to swap out the implementations without breaking a lot of dependencies.
+The framework solution folder contains the \lstcode{Jukebox.Common} and \lstcode{Jukebox.Common.Abstractions} projects. All interfaces for business and validation logic classes are part of the \lstcode{Jukebox.Common.Abstractions} project. Furthermore, the domain classes and the abstract data context are part of this \gls{dll}. All business and validation implementations are contained in the \lstcode{Jukebox.Common} project. This separation makes it possible to swap implementations without breaking too many dependencies.
 
-Every good application should be tested to a certain degree to ensure its working correctly. The Jukebox project does not contain many tests because it is more of a proof of concept application but acceptance tests are easy to write and maintain which makes them a good compromise between \revMark{testing and time}.
+Every good application should be tested to a certain degree to ensure that it works correctly. The Jukebox project does not contain many tests, because it is a proof-of-concept application. However, acceptance tests are easy to write and maintain, and thus provide an economic compromise between development time and quality.
 
-Lastly the \gls{asp} project contains the \gls{asp} specific code. This is also the only project to reference any \gls{asp} \glspl{dll}.
+Finally, the \lstcode{JukeboxAPI} project contains the \gls{asp} specific code, like controller classes and the \lstcode{Startup} and \lstcode{Program} classes. This is the only project which references any \gls{asp} specific \glspl{dll}.
 
 \image[scale=.8]{projectStructure.png}{C\# project structure.}
 
 \Subsubsection{Services and Validation}
 
-Another step towards a \revMark{modularized} application is to use a service layer. This service layer handles all the business logic the application needs to funktion. An example for this is the \lstcode{IPlayerService}, shown in \myautoref{lst:IPlayerService.cs}. This service contains methods for creating a \lstcode{Player} object, executing a command on a certain player, or getting details about one specific or all players available.
+Another step towards a modularized application is the use of a service layer. The service layer handles all the business logic the application needs to function. An example for this is the \lstcode{IPlayerService}, shown in \myautoref{lst:IPlayerService.cs}. This service contains methods for creating a \lstcode{Player} object, adding a song to a \lstcode{Player} object, executing a command on a certain player, or getting details about one specific or all players available.
 
-For each domain there is one service class. These services are accessed through constructor injection and are used in controllers as well as other services. Each service as well as all of the controllers are using the \gls{tpl} and the C\# Async and Await pattern \cite{tpl}. This pattern makes asynchronous programming simple as long as the programmer abides to certain practices. Once the developer chooses to use the Async and Await pattern every method should return a \lstcode{Task} object which in turn means no part of the application should rely on synchronous programming anymore. A \lstcode{Task} should never be awaited using the \lstcode{Result} property or \lstcode{Wait()} method since they may cause deadlocks but instead the \lstcode{await} keyword should be used.
+For each domain there is one service class. These services are accessed through constructor injection and are used in controllers as well as other services. Each service and all of the controllers use the \gls{tpl} and the C\# Async and Await pattern \cite{tpl}. This pattern simplifies asynchronous programming provided that the programmer abides by certain rules. Once the developer chooses to use the Async and Await pattern, every method should return a \lstcode{Task} object which in consequence means that no part of the application should use a synchronous programming model anymore. A \lstcode{Task} should never be awaited using the \lstcode{Result} property or \lstcode{Wait()} method, because these may cause deadlocks. Instead, the \lstcode{await} keyword should be used.
 
 \file{IPlayerService.cs}{The \lstcode{IPlayerService} interface.}{NC_CSharp}
 
-Validation is an important aspect. The backend has to verify that the data sent by a client is structurally as well as semantically correct and that the client is authorized to execute the action. This is done though the use of interception in the Jukebox project. Each service has got an associated interceptor as well as a associated validator class. The interceptor deceides which aspects of a method have to be validated and the validator class contains the logic for the validation. This separation is necessary because the interceptor is tightly coupled to the service it is intercepting while the validator should only be concerned with the object it is supposed to validate. Looking at the \lstcode{IPlayerService} interface (\myautoref{lst:IPlayerService.cs}), it contains a mehtod called \lstcode{AddSongToPlayerAsync()}. This method will be intercepted and the interceptor has to validate that both the player and the song with the given ID exist. For this purpose the interceptor holds a reference to the \lstcode{PlayerValidator} and the \lstcode{SongValidator} objects which contain the methods for validation, as shown in \myautoref{lst:addSongToPlayerAsync.cs}. If the validator methods would reside inside the interceptor this scenario would not be possible.
+Validation is an important aspect of any application. The backend has to verify that the data sent by a client is structurally and semantically correct and that the client is authorized to execute the action. This is done by interception in the Jukebox project. Each service has an associated interceptor as well as an associated validator class. The interceptor deceids which aspects of a method have to be validated and the validator class contains the logic for the validation. This separation is necessary because the interceptor is tightly coupled to the service it is intercepting, while the validator should only be concerned with the object it is supposed to validate. The \lstcode{IPlayerService} interface (\myautoref{lst:IPlayerService.cs}) contains a method called \lstcode{AddSongToPlayerAsync()}. This method will be intercepted and the interceptor has to validate that both the player and the song with the given ID do exist. For this purpose the interceptor holds a reference to the \lstcode{PlayerValidator} and the \lstcode{SongValidator} objects which contain the needed methods for validation, as shown in \myautoref{lst:addSongToPlayerAsync.cs}. If the validation methods would reside within the interceptor, this scenario would not be possible.
 
 \file{addSongToPlayerAsync.cs}{Intercepting the \lstcode{AddSongToPlayerAsync} method.}{NC_CSharp}
 
 \Section{ASP.NET Core Websockets}
 
-To use websockets in \gls{asp} the websocket middleware has to be added to the middleware pipeline. Here the developer can configure settings like the \lstcode{KeepAliveInterval} and the \lstcode{ReceiveBufferSize}. Whether a request is a request for a websocket or not can be detected using the \lstcode{IsWebSocketRequest} property on the \lstcode{HttpContext.WebSockets} object. When such a request is detected the communication can be established using the \lstcode{AcceptWebSocketAsync()} method on the \lstcode{HttpContext.WebSocket} object. This method returns a \lstcode{Task<WebSocket>} of which the \lstcode{WebSocket} is used for the rest of the communication. \cite{aspWebsockets}
+To use websockets in \gls{asp}, the websocket middleware must be added to the middleware pipeline. Here, the developer can configure settings like the \lstcode{KeepAliveInterval} and the \lstcode{ReceiveBufferSize}. Whether a request is a request for a websocket or not, can be detected using the \lstcode{IsWebSocketRequest} property on the \lstcode{HttpContext.WebSockets} object. When such a request is detected, the communication can be established using the \lstcode{AcceptWebSocketAsync()} method on the \lstcode{HttpContext.WebSocket} object. This method returns a \lstcode{Task<WebSocket>} of which the \lstcode{WebSocket} is used for the entire communication. \cite{aspWebsockets}
 
-After accepting the socket the Jukebox \gls{asp} server will authenticate the client and if the authentication was successfull create a \lstcode{Player} object. Since the communication is only supposed to go from the server to the client the server will use a \enquote{keep-alive loop}. This loop will wait for any message comming from the player. Once such a message arraives the server checks whether the client wants to terminate the session or sent data. In case of termination the \lstcode{Player} object will be destroyed and the websocket will be closed. If the client sent data the server will handle the message in its \lstcode{HandlePlayerMessage()} method.
+After accepting the socket, the Jukebox \gls{asp} server will authenticate the client and, if the authentication was successful, create a \lstcode{Player} object. Since the websocket connection will be terminated once the request is finished, the server will use a \enquote{keep-alive loop}, as shown in \myautoref{lst:HandlePlayerOwnerWebsocket.cs}. This loop will wait for any message coming from the player. Once a message arrives, the server checks whether the client wants to terminate the session or has sent data. In case of termination, the websocket will be closed and the \lstcode{Player} object will be destroyed. If the client has sent data, the server will handle the message in its \lstcode{HandlePlayerMessage()} method.
 
 \file{HandlePlayerOwnerWebsocket.cs}{The \enquote{keep-alive loop} for a websocket.}{NC_CSharp}
 
 \Section{Remember these points}
 developers can be female (duh)
-recognized
+recognized, separat
